--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = mongodb+srv://admin:admin@cluster0-mjeql.gcp.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://user:user@cluster0-hhews.gcp.mongodb.net/test?retryWrites=true&w=majority
