--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "axios": "^0.19.0",
+    "babel-preset-react-app": "^9.0.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-datepicker": "^2.8.0",
